--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -1,16 +1,16 @@
 #projects {
   background-color: $white-color;
   color: $dark-blue-text;
-  margin-top: -10rem;
   padding-top: 15rem;
 
   @include respond(tab-land) {
-    margin-top: 0;
+    margin-top: 20px;
     padding-top: 5rem;
   }
 
   .project-wrapper {
     margin-bottom: 15rem;
+    border-radius: 200px;
 
     @include respond(phone) {
       margin-bottom: 0rem;
